*SVN*

* Update Routing to complain when :controller is not specified by a route. Closes #6669. [Nicholas Seckar]

* Ensure render_to_string cleans up after itself when an exception is raised.  #6658 [rsanheim]

* Extract template_changed_since? from compile_template? so plugins may override its behavior for non-file-based templates.  #6651 [Jeff Barczewski]

* Update to Prototype and script.aculo.us [5579]. [Thomas Fuchs]

* simple_format helper doesn't choke on nil.  #6644 [jerry426]

* Update to Prototype 1.5.0_rc2 [5550] which makes it work in Opera again [Thomas Fuchs]

* Reuse named route helper module between Routing reloads. Use remove_method to delete named route methods after each load. Since the module is never collected, this fixes a significant memory leak. [Nicholas Seckar]

* ActionView::Base.erb_variable accessor names the buffer variable used to render templates. Defaults to _erbout; use _buf for erubis.  [Rick Olson]

* assert_select_rjs :remove.  [Dylan Egan]

* Always clear model associations from session.  #4795 [sd@notso.net, andylien@gmail.com]

* Update to Prototype 1.5.0_rc2. [Sam Stephenson]

* Remove JavaScriptLiteral in favor of ActiveSupport::JSON::Variable. [Sam Stephenson]

* Sync ActionController::StatusCodes::STATUS_CODES with http://www.iana.org/assignments/http-status-codes.  #6586 [dkubb]

* Multipart form values may have a content type without being treated as uploaded files if they do not provide a filename.  #6401 [Andreas Schwarz, Jeremy Kemper]

* assert_response supports symbolic status codes.  #6569 [Kevin Clark]
    assert_response :ok
    assert_response :not_found
    assert_response :forbidden

* Cache parsed query parameters.  #6559 [Stefan Kaes]

* Deprecate JavaScriptHelper#update_element_function, which is superseeded by RJS [Thomas Fuchs]

* pluralize helper interprets nil as zero.  #6474 [pope]

* Fix invalid test fixture exposed by stricter Ruby 1.8.5 multipart parsing.  #6524 [Bob Silva]
